# card-fraud-ops-analyst-agent

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEMAP.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  agents.md  memory.md  platform-adapter.yaml  pyproject.toml  status.md
app/: main.py
app/agent/: __init__.py  completion.py  executor.py  graph.py  planner.py  registry.py  state.py
app/agents/: action_planner.py  conflict_matrix.py  context_builder.py  context_builder_core.py  evidence_builder.py  explanation_builder.py  freshness.py  pattern_engine.py  pattern_engine_core.py  pattern_utils.py  pipeline.py  reasoning_core.py  reasoning_engine.py  recommendation_engine.py  recommendation_engine_core.py  rule_draft_core.py  rule_draft_engine.py  similarity_engine.py  similarity_engine_core.py  similarity_utils.py
app/clients/: embedding_client.py  rule_management_client.py  tm_client.py
app/core/: auth.py  config.py  database.py  dependencies.py  errors.py  logging.py  metrics.py  tracing.py
app/llm/: consistency.py  provider.py  redaction.py
app/persistence/: audit_repository.py  base.py  context_reader.py  insight_repository.py  investigation_repository.py  query_builder.py  recommendation_repository.py  rule_draft_repository.py  run_repository.py  state_store.py  tool_log_repository.py
app/services/: insight_service.py  investigation_service.py  recommendation_service.py  rule_draft_service.py
app/templates/: trace_viewer.py
app/tools/: __init__.py  base.py  context_tool.py  evidence.py  link_analysis_tool.py  pattern_tool.py  reasoning_tool.py  recommendation_tool.py  rule_draft_tool.py  similarity_tool.py
app/utils/: clock.py  constants.py  data_access.py  dataclass_utils.py  hashing.py  idempotency.py  redaction.py  type_utils.py
cli/: _constants.py  auth0_bootstrap.py  db_setup.py  dev.py  doppler_local.py  e2e.py  lint.py  openapi.py  platform_adapter.py  test.py
db/: ops_agent_schema.sql
db/migrations/: 001_create_ops_agent_tables.sql  002_create_ops_agent_indexes.sql  003_create_ops_agent_constraints.sql  004_create_ops_agent_grants.sql  005_add_missing_constraints_and_indexes.sql  006_add_transaction_embeddings_pgvector.sql  006_set_agentic_model_mode_default.sql  007_structured_evidence_envelope.sql  008_add_run_observability_columns.sql  009_add_run_runtime_audit_snapshots.sql
docs/: README.md  codemap.md  phase-1-implementation-plan.md
docs/01-setup/: README.md  auth0-setup-guide.md  database-access-and-roles.md  doppler-secrets-setup.md  local-setup.md
docs/02-development/: README.md  agent-workflow-and-orchestration.md  agentic-improvement-plan-phase0-2.md  architecture.md  developer-guide.md  domain-and-data-model.md  idempotency-and-replay.md  performance-patterns.md  storage-and-migrations.md
docs/03-api/: README.md  action-event.schema.v1.json  insight-event.schema.v1.json  openapi-outline.md  openapi.json  ops-agent-api-contract-v1.md  portal-integration.md  rule-draft-package.schema.v1.json
docs/04-testing/: README.md  (+3 more)
scripts/: docker_guard.py  e2e_local_test.py  generate_openapi.py  load_test_data.py  precommit_quality_gate.py  render_e2e_matrix_html.py  reset_data.py  reset_tables.py  review_scenario_outputs.py  run_dev.py  run_e2e_matrix_detailed.py  seed_test_scenarios.py  setup_auth0.py  setup_database.py  verify_auth0.py  verify_database.py
tests/: conftest.py  test_precommit_demo.py
(+175 files in other folders)
